--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 
-    <h1>Ofentse's First Website</h1>
-	<h2> </h2>
+	<h1>Ofentse's First Website</h1>
+	<h2><img src="images/Pineapple.jpg" alt="Pinapples in a row"/> </h2>
 	<h2> </h2>
 	<p> </p>
+
 
 </body>
 
