--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 	<meta charset="UTF-8">
 </head>
 <body>
+
 	<h1>Ofentse's First Website</h1>
-	<h2><img src="images/Pineapple.jpeg" alt="Pinapples in a row"/> </h2>
-	<p> </p>
+	<h2><img src="images/Pineapple. jpg" alt="Pinapples in a row"/> </h2>
+	<h2>A link to Page2</h2>
+	<p><a href="Page2.html">HTML Page2</a></p>
+
+
 </body>
+
+
 </html>
