--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
 
 	<h1>Ofentse's First Website</h1>
-	<h2><img src="images/Pineapple. jpg" alt="Pinapples in a row"/> </h2>
-	<h2>A link to Page2</h2>
+	<h2><img src="images/Pineapple.jpeg" alt="Pinapples in a row"/> </h2>
 	<p><a href="Page2.html">HTML Page2</a></p>
 
 
