--- a/Page2.html
+++ b/Page2.html
@@ -16,7 +16,7 @@
 
 </ul>
 
-<a href="file:///C:/Users/Admin/Desktop/Ofentse/images/index.html">Index html.</a>
+<a href="https://tumiiey2996.github.io/boitumelo/">Index html.</a>
 
 <p><a href="https://www.foodnetwork.com/">Food Network</a></p>
 
